# AIROOMCLEANER

./: .dockerignore  .env  .gitignore  APPROVED_LOGGING_PLAN.md  Action_Plan.md  CONFIG.md  Code_Review_Report.md  Codebase Audit & Enhancement Plan.md  Codebase_Audit_&_Enhancement_Plan.md  Codebase_Audit_&amp;_Enhancement_Plan.md  Codebase_Audit_1.md  Codebase_Audit_10.md  Codebase_Audit_11.md  Codebase_Audit_12.md  Codebase_Audit_13.md  Codebase_Audit_2.md  Codebase_Audit_3.md  Codebase_Audit_4.md  Codebase_Audit_5.md  Codebase_Audit_6.md  Codebase_Audit_7.md  Codebase_Audit_8.md  Codebase_Audit_9.md  Codebase_Audit_Final.md  Codebase_Audit_and_Enhancement_Plan.md  DEPENDENCY_MANAGEMENT.md  Final_Addon_Debug_Report_Stable.md  Final_Code_Audit_Report_A+.md  Final_Code_Audit_Report_A+_Stable.md  HA_Addon_Audit_1.md  HA_Addon_Audit_2.md  HA_Addon_Audit_3.md  HA_Addon_Audit_4.md  Old_Codebase_Audit_Enhancement_Plan.md  README.md  TESTING_STRATEGY.md  TODO.md  docker-compose.yml  eslint-report-2.json  eslint-report-3.json  (+19 more)
ai_room_cleaner/: .coverage  Dockerfile  build.json  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
ai_room_cleaner/app/: __init__.py  ai_service.py  camera_service.py  config.py  dependencies.py  ha_service.py  main.py  requirements.txt  test_app.py
ai_room_cleaner/backend/: Dockerfile  main.py  middleware.py  pip-audit-report-1.json  pylint-report-1.txt
ai_room_cleaner/data/: options.json
ai_room_cleaner/frontend/: Dockerfile  app.js  config.js  eslint-report-1.json  eslint-report-final.json  eslint.config.js  main.js  (+10 more)
(+53 files in other folders)
